# mtuci-ML

./: .gitignore  model.pth  pyproject.toml
bert/: main.ipynb
lectures/3/: Lecture3.ipynb
mnist/: custom_dataset.ipynb  main.ipynb  main_test.ipynb  mnist_mlp_model.pth
rnn/: main.ipynb
word2vec/: main.ipynb
